--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
+:root{
+  --primary: #f50057;
+  --primaryShadow: #b32054;
+  --bgcolor: #78C2AD;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-weight: 400;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 a {
+  font-size: 1.8rem;
+}
+h1 a.text-light:hover {
+  color: white!important;
+  text-decoration: none!important;
+}
+.nuevo-post{
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.form-control{
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #5a5a5a;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.4rem;
+}
+.flex{
+  display: flex;
+}
+.justify-content{
+  justify-content: center;
+}
+.icon{
+  display: flex;
+  justify-content: center;
+}
+.icon:hover{
+  cursor: pointer;
+}
+.margin-right{
+  margin-right: .5rem;
+}
+.form-group label,
+.list-group-item {
+  font-size: 1.4rem;
+}
+.capitalize{
+  text-transform: capitalize;
+}
+.table th, .table td{
+  vertical-align: middle;
+}
+.text-center{
+  text-align: center;
 }
